<!--
  ~
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name">SpaceHub</string>
    <string name="bottom_nav_launches">Launches</string>
    <string name="bottom_nav_news">News</string>
    <string name="bottom_nav_saved">Saved</string>
    <string name="generic_error_title">Houston we have a problem!</string>
    <string name="generic_error_description">Something went wrong, please check your network and try again</string>
    <string name="try_again">Try Again</string>
    <string name="error_view_icon_content_description">Error Icon</string>
    <string name="view_launch_separator">:</string>
    <string name="view_launch_seconds">Sec</string>
    <string name="view_launch_minutes">Min</string>
    <string name="view_launch_hours">Hours</string>
    <string name="view_launch_days">Days</string>
    <string name="launch_image_content_description">Launch Image</string>
</resources>