<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.robinhood.ticker.TickerView
        android:id="@+id/days"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="24" />

    <TextView
        android:id="@+id/daysLabel"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_launch_days"
        app:layout_constraintEnd_toEndOf="@+id/days"
        app:layout_constraintStart_toStartOf="@+id/days"
        app:layout_constraintTop_toBottomOf="@+id/days" />

    <TextView
        android:id="@+id/separator1"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        android:includeFontPadding="false"
        android:text="@string/view_launch_separator"
        app:layout_constraintBottom_toBottomOf="@+id/days"
        app:layout_constraintStart_toEndOf="@id/days"
        app:layout_constraintTop_toTopOf="@+id/days" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/hours"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        app:layout_constraintBottom_toBottomOf="@+id/days"
        app:layout_constraintStart_toEndOf="@+id/separator1"
        app:layout_constraintTop_toTopOf="@+id/days"
        tools:text="22" />

    <TextView
        android:id="@+id/hoursLabel"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_launch_hours"
        app:layout_constraintEnd_toEndOf="@+id/hours"
        app:layout_constraintStart_toStartOf="@+id/hours"
        app:layout_constraintTop_toBottomOf="@+id/hours" />

    <TextView
        android:id="@+id/separator2"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        android:includeFontPadding="false"
        android:text="@string/view_launch_separator"
        app:layout_constraintBottom_toBottomOf="@+id/hours"
        app:layout_constraintStart_toEndOf="@id/hours"
        app:layout_constraintTop_toTopOf="@+id/hours" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/minutes"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        app:layout_constraintBottom_toBottomOf="@+id/days"
        app:layout_constraintStart_toEndOf="@+id/separator2"
        app:layout_constraintTop_toTopOf="@+id/days"
        tools:text="32" />

    <TextView
        android:id="@+id/minutesLabel"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_launch_minutes"
        app:layout_constraintEnd_toEndOf="@+id/minutes"
        app:layout_constraintStart_toStartOf="@+id/minutes"
        app:layout_constraintTop_toBottomOf="@+id/minutes" />

    <TextView
        android:id="@+id/separator3"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        android:includeFontPadding="false"
        android:text="@string/view_launch_separator"
        app:layout_constraintBottom_toBottomOf="@+id/minutes"
        app:layout_constraintStart_toEndOf="@id/minutes"
        app:layout_constraintTop_toTopOf="@+id/minutes" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/seconds"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/launch_view_space"
        app:layout_constraintBottom_toBottomOf="@+id/days"
        app:layout_constraintStart_toEndOf="@+id/separator3"
        app:layout_constraintTop_toTopOf="@+id/days"
        tools:text="46" />

    <TextView
        android:id="@+id/secondsLabel"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_launch_seconds"
        app:layout_constraintEnd_toEndOf="@+id/seconds"
        app:layout_constraintStart_toStartOf="@+id/seconds"
        app:layout_constraintTop_toBottomOf="@+id/seconds" />

</androidx.constraintlayout.widget.ConstraintLayout>